# DG_wave_c

./: .CMakeLists.txt.swp  .get_openmpi.sh.swp  .gitignore  .readthedocs.yml  .travis.yml  .travis.yml.swp  CMakeLists.txt  README.md  README.md.orig.2020-12-02_165506  README.md.orig.2020-12-02_202838  README.md.orig.2020-12-02_203338  README.md.toc.2020-12-02_165506  README.md.toc.2020-12-02_202838  README.md.toc.2020-12-02_203338  get_openmpi.sh  profiling.txt  visitlog.py
docs/: index.html
docs/doxygen/: .Doxyfile.swp  Doxyfile
docs/doxygen/html/: dg__CFL_8cpp.html  dg__CFL_8cpp.js  dg__CFL_8cpp__incl.map  dg__CFL_8cpp__incl.md5  dg__LB__quality_8cpp.html  dg__LB__quality_8cpp.js  dg__LB__quality_8cpp__incl.map  dg__LB__quality_8cpp__incl.md5  dg__a__times__spatial__derivative_8cpp.html  dg__a__times__spatial__derivative_8cpp.js  dg__a__times__spatial__derivative_8cpp__incl.map  dg__a__times__spatial__derivative_8cpp__incl.md5  dg__adapt_8cpp.html  dg__adapt_8cpp.js  dg__adapt_8cpp__incl.map  dg__adapt_8cpp__incl.md5  dg__advection__diffusion__driver_8cpp.html  dg__advection__diffusion__driver_8cpp.js  dg__advection__diffusion__driver_8cpp__incl.dot  dg__advection__diffusion__driver_8cpp__incl.map  dg__advection__diffusion__driver_8cpp__incl.md5  dg__affine__map_8cpp.html  dg__affine__map_8cpp.js  dg__affine__map_8cpp__incl.map  dg__affine__map_8cpp__incl.md5  dg__amr_8cpp.html  dg__amr_8cpp.js  dg__amr_8cpp__incl.map  dg__amr_8cpp__incl.md5  dg__basis_8cpp.html  dg__basis_8cpp.js  dg__basis_8cpp__incl.dot  dg__basis_8cpp__incl.map  dg__basis_8cpp__incl.md5  dg__basis__storage_8cpp.html  dg__basis__storage_8cpp.js  dg__basis__storage_8cpp__incl.dot  dg__basis__storage_8cpp__incl.map  dg__basis__storage_8cpp__incl.md5  dg__cantor__pairing_8cpp.html  (+304 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.html  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_15.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+46 more)
docs/sphinx/: requirements.txt
docs/sphinx/source/: conf.py  dg_AMR.rst  dg_data_structure.rst  dg_load_balancing.rst  dg_motivation.rst  dg_mpi.rst  dg_numerical_fluxes.rst  dg_other_features.rst  dg_profiling.rst  dg_reference.rst  dg_refs.bib  dg_results.rst  dg_spectral_approximation.rst  dg_wave_propagation_2d.rst  index.rst
eigenvalue/: eig06.txt  eig08.txt  eig10.txt  eig12.txt  eig14.txt  eig16.txt  eig18.txt  eig20.txt  eig22.txt  eig24.txt  eig26.txt  eig28.txt  eig30.txt  eig32.txt
gmsh_files/: .16_elements.msh.swp  .4_elements.msh.swp  1024_elements.msh  1024_elements_small.msh  16_elements.msh  256_elements.msh  4_elem_small_domain.msh  4_elements.msh  64_elements.msh  64_mesh_reflect.msh  64elem_8domain.msh  sin_256.msh
gmsh_files/weak/: 128_128.msh  32_32.msh  64_64.msh
inc/: .dg_adapt.h.swp  .dg_basis.h.swp  .dg_basis_storage.h.swp  .dg_boundary_table.h.swp  .dg_derived_datatype.h.swp  .dg_end_game.h.swp  .dg_gen_dual_graph.h.swp  .dg_hilbert_sort.h.swp  .dg_index_local_global.h.swp  .dg_load_balancing.h.swp  .dg_load_struct.h.swp  .dg_local_storage.h.swp  .dg_message_exchange.h.swp  .dg_mpi_table_construct.h.swp  .dg_neighbour_list.h.swp  .dg_nodal_2d_storage.h.swp  .dg_numerical_flux.h.swp  .dg_param.h.swp  .dg_read_mesh_2d.h.swp  .dg_search_rank.h.swp  .dg_simple_test.h.swp  .dg_spatial_derivative.h.swp  .dg_status_table.h.swp  .dg_test.h.swp  .dg_unit.h.swp  .dg_user_defined.h.swp  .dg_verification.h.swp  dg_CFL.h  dg_LB_quality.h  dg_a_times_spatial_derivative.h  dg_adapt.h  dg_advection_diffusion_driver.h  dg_affine_map.h  dg_amr.h  dg_basis.h  dg_basis_storage.h  dg_boundary_table.h  dg_cantor_pairing.h  dg_construct_mpi_boundary.h  dg_constructor.h  (+61 more)
src/: .dg_a_times_spatial_derivative.cpp.swp  .dg_adapt.cpp.swp  .dg_advection_diffusion_driver.cpp.swp  .dg_basis.cpp.swp  .dg_basis_storage.cpp.swp  .dg_cantor_pairing.cpp.swp  .dg_construct_mpi_boundary.cpp.swp  .dg_create_hash.cpp.swp  .dg_derived_datatype.cpp.swp  .dg_distribute_elements.cpp.swp  .dg_gen_dual_graph.cpp.swp  .dg_hilbert_curve.cpp.swp  .dg_hilbert_sort.cpp.swp  .dg_hrefinement.cpp.swp  .dg_interface_construct.cpp.swp  .dg_io.cpp.swp  .dg_load_balancing.cpp.swp  .dg_local_storage.cpp.swp  .dg_main.cpp.swp  .dg_message_exchange.cpp.swp  .dg_mpi.cpp.swp  .dg_mpi_table_construct.cpp.swp  .dg_neighbour_list.cpp.swp  .dg_nodal_2d_storage.cpp.swp  .dg_numerical_flux.cpp.swp  .dg_param.cpp.swp  .dg_prepare_hilbert_scheme.cpp.swp  .dg_proc_mapping.cpp.swp  .dg_put_into_mpi_table.cpp.swp  .dg_read_mesh_2d.cpp.swp  .dg_reallocate_elem.cpp.swp  .dg_search_rank.cpp.swp  .dg_simple_test.cpp.swp  .dg_single_index.cpp.swp  .dg_spatial_derivative.cpp.swp  .dg_status_table.cpp.swp  .dg_test.cpp.swp  .dg_time_derivative.cpp.swp  .dg_user_defined.cpp.swp  .dg_verification.cpp.swp  (+78 more)
tests/: .facen00003.dat.swp
